--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf build && cd ../../helsinki-fullstack/helsinki-fullstack/part5/bloglist-frontend && npm run build --prod && cp -r build ../../../../backend-fullstack/part4-blog-list",
-    "deploy": "git push heroku master",
+    "deploy": "git push heroku part5-bloglist-fullstack:master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail",
     "lint": "eslint .",
